--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,7 +26,7 @@ jobs:
         run: go build -o ./go-crud-api
 
       - name: Build Docker Image
-        run: docker build -t ./go-crud-api .
+        run: docker build -t go-crud-api .
 
   deploy:
     name: Deploy to Server
