--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,7 +23,7 @@ jobs:
         run: go mod download
 
       - name: Build Go Binary
-        run: go build -o ./go-crud-api
+        run: go build -o /go-crud-api ./cmd
 
       - name: Build Docker Image
         run: docker build -t go-crud-api .
