--- a/vercel.json
+++ b/vercel.json
@@ -8,22 +8,22 @@
   ],
   "routes": [
     {
-      "src": "/api/posts",
+      "src": "/posts",
       "methods": ["GET", "POST", "PUT", "DELETE"],
       "dest": "main"
     },
     {
-      "src": "/api/posts/:id",
+      "src": "/posts/:id",
       "methods": ["GET", "PUT", "DELETE"],
       "dest": "main"
     },
     {
-      "src": "/api/users",
+      "src": "/users",
       "methods": ["POST"],
       "dest": "main"
     },
     {
-      "src": "/api/users/login",
+      "src": "/users/login",
       "methods": ["POST"],
       "dest": "main"
     },
